syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcServer";

service Chat {
	rpc Join (User) returns (stream MessageModel);
	rpc Send (MessageModel) returns (google.protobuf.Empty);
	rpc LogOut (User) returns (google.protobuf.Empty);
	rpc GetUserList (google.protobuf.Empty) returns (stream UserNumber);
}

message UserNumber {
	int32 count = 1;
}

message User {
	string name = 1;
}

message MessageModel {
	string user = 1;
	string text = 2;
	google.protobuf.Timestamp time = 3;
}